# StudyFlow

./: PROJECT_PLAN.md  PUBLIC_WEB_DEPLOY.md  README.md  build_warnings.txt  build_warnings_raw.txt  gradle.properties  netlify.toml  run-web.bat  run-web.ps1  vercel.json
.github/workflows/: static.yml
StudyFlow/: .gitignore  PROJECT_PLAN.md  README.md
StudyFlow/.github/workflows/: pages.yml
StudyFlow/PixelMatter/: .gitignore  CMakeLists.txt  PROJECT_PLAN.md  README.md
StudyFlow/PixelMatter/scripts/: build.sh
StudyFlow/PixelMatter/src/app/: Application.cpp  Application.h
StudyFlow/PixelMatter/src/input/: InputHandler.cpp  InputHandler.h
StudyFlow/PixelMatter/src/rendering/: Renderer.cpp  Renderer.h
StudyFlow/PixelMatter/src/scenes/: DemoScenes.cpp  DemoScenes.h
StudyFlow/PixelMatter/src/simulation/: Cell.h  PixelMaterial.cpp  PixelMaterial.h  World.cpp  World.h
StudyFlow/PixelMatter/src/storage/: SaveLoad.cpp  SaveLoad.h
StudyFlow/PixelMatter/src/ui/: UiLayout.h
StudyFlow/PixelMatter/tests/: PixelMatterTests.cpp
StudyFlow/StudyFlow/: PROJECT_PLAN.md  README.md  build.gradle.kts
StudyFlow/StudyFlow/app/: build.gradle.kts
StudyFlow/StudyFlow/gradle/: libs.versions.toml
StudyFlow/StudyFlow/scripts/: run.bat
StudyFlow/StudyFlowWeb/: README_WEB.md  app.js  index.html  run-local.bat  seed-data.js  site.webmanifest  styles.css
StudyFlow/app/: build.gradle.kts
StudyFlow/app/src/main/kotlin/studyflow/: App.kt  Main.kt
StudyFlow/app/src/test/kotlin/studyflow/: AppScreenTest.kt
StudyFlow/sample_data/: exam_schedule.csv  semester_subjects.csv
StudyFlow/scripts/: run.sh
StudyFlowWeb/: README_WEB.md  app.js  run-local.ps1  seed-data.js  styles.css
sample_data/: basic_tasks.csv  exam_schedule.csv
(+70 files in other folders)
